--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i-tools",
+  "name": "ittf-tools",
   "version": "1.0.0",
   "description": "一个会被频繁使用的功能工具",
   "main": "index.js",
@@ -7,6 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "执念",
+  "author": "听风",
   "license": "ISC"
 }
